# dvwconverter

./: .gitignore  LICENSE  README.md  README_verbose.md  pyproject.toml
dvwconverter/: __init__.py  __main__.py  accuracy.py  db.py  parser.py  roundtrip.py
