[build-system]
requires = ["setuptools>=43", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvwconverter"
version = "0.2.0"
description = "Convert DataVolley .dvw scouting files to/from SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dvwconverter = "dvwconverter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dvwconverter*"]
