[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvwconverter"
dynamic = ["version"]
description = "Convert DataVolley .dvw scouting files to/from SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
dvwconverter = "dvwconverter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dvwconverter*"]
